--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE htmL>
+<!DOCTYPE html>
 <html>
 <body>
 <h1>Hello World</h1>
-<p></p>
+<p>I don't know what to say. I just want to see if this works. It's been such a long time since I've written HTML</p>
 </body>
 </html>
